Added h1 and started an unordered list

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trials of Osiris Fixes</title>
 </head>
 <body>
+    <h1>What's Wrong With Trials of Osiris?</h1>
+    <ul>
+        <li>Current matchmaking making it very difficult for average players to make any progress towards loot</li>
+        <li>Lack of flawless loot, thus less of an incentive to go flawless</li>
+        <li>Cheaters...cheaters everywhere</li>
+    </ul>
     
 </body>
 </html>
