--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trials of Osiris Fixes</title>
+    <title>Trials of Osiris Problems</title>
 </head>
 <body>
     <h1>What's Wrong With Trials of Osiris?</h1>
